--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,33 +1,21 @@
-<% @list.players.each do |movie| %>
-        <div class="card_style col-12 col-md-6 offset-lg-3">
-            <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-          <div class="card__thumb">
-            <a href="#">
-                  <%= image_tag movie.poster_url, alt: "movie.title" %>
-            </a>
+<div class="card">
+    <!-- <%def randomized_background_image
+  images = ["https://images.unsplash.com/photo-1535016120720-40c646be5580?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bW92aWV8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1542204165-65bf26472b9b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bW92aWV8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1598899134739-24c46f58b8c0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1460881680858-30d872d5b530?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1513106580091-1d82408b8cd6?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1572177191856-3cde618dee1f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjZ8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1616530940355-351fabd9524b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1585951237313-1979e4df7385?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1619099619226-f96e319e3732?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzV8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1508427991396-70954459dcc4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1518929458119-e5bf444c30f4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTF8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1512412632857-b93f6ecce335?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTh8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60", "https://images.unsplash.com/photo-1618193319734-478296be37ad?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTZ8fG1vdmllfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60"]
+  images[rand(images.size)]
+end %> -->
+      <% @lists.each do |list| %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2))"> <!-- url(<%= randomized_background_image %>) -->
+          <div class="toggle">
+            <span>▶</span><h2><%= list.name %></h2>
           </div>
-          <div class="card__date">
-            <span class="card__date__day"><%= movie.rating %></span> <i class="fas fa-star"></i>
-          </div>
-          <div class="end">
-            <div class="card__body">
-              <div class="card__category"><a href="#"><%= @list.name %></a></div>
-              <h2 class="card__title"><a href="#"><%= movie.title %></a></h2>
-              <p class="card__description"><%= movie.overview %>
-              </p>
+          <div class="hidden">
+            <div class="name">
+                <%= image_tag(url_for(list.photo_url), class:'looney_image') %>
             </div>
-            <div class="card__footer">
-              <div class="comment">
-                <i class="fas fa-quote-left mr-2"></i>
-                <small><%= bookmark.comment %></small> 
-                <i class="fas fa-quote-right mr-2"></i>
-              </div> 
-              <div class="center">
-                <%= link_to bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"} do %>
-                  <i class="fas fa-trash-alt"></i>
-                <% end %>
-              </div>
+            <div class="name">
+                <%= list.overview %>
             </div>
           </div>
         </div>
-          <% end %>
+      <% end %>
+</div>
