--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+h1 {
+    text-align: center;
+  }
+  .looney_image {
+    width: 100%;
+    height: 220px;
+  }
