--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,23 @@
     <%= yield %>
   </body>
   <script>
-      const card = document.querySelector(".card-category");
-      const cardToggle = document.querySelector(".toggle");
-      cardToggle.onclick = function(){
-        card.classList.toggle("active")
-      }
+        let card = document.querySelector(".card-category");
+        let cardToggle = document.querySelector(".toggle");
+        let toggleCard = document.querySelectorAll(".card-category");
+        let toggleNav = document.querySelectorAll(".toggle");
 
+      let toggleNavLength = toggleNav.length;
+      let showCard = function show(card){
+        console.log('hihi')
+      };
+          toggleNav.forEach((toggle) => {
+            toggle.addEventListener("click", (event) => {
+              console.log("hello");
+              toggleCard.forEach((element) => {
+                console.log("world");
+                element.classList.toggle("actiive");
+              });
+            });
+        });
   </script>
 </html>
