--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -13,97 +13,97 @@ body{
     height: 100%;
     width: 100%;
     margin: 30px 0;
-}
-    // main{
-    //     width: 90%;
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: center;
-    //     overflow: hidden;
-    // }
-        // .card_container{
-        //     box-shadow: 0 10px 30px rgba(0,0,0,.3);
-        // }    
+}    
             .card{
-                width: 100%;
+                width: 60%;
                 margin:30px 0;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
                 overflow: hidden;
-                border-radius: 4px;
-                border:11px solid black;
+                border-radius: 2px;
             }
                 .card-category{
                     width:100%;
-                    height:45px;
+                    height:35px;
                     overflow: hidden;
-                    border-radius: 4px;
+                    border-radius: 2px;
                     display: flex;
                     flex-direction: column;
-                    border:3px solid rgb(13, 150, 36);
                     margin: 10px;
-                    background: linear-gradient(rgba(214, 214, 214, 0.5), rgba(204, 204, 204, 0.5));
                     transition: height ease-in-out 1s;
+                    box-shadow: 0 10px 10px rgba(0,0,0,0.3);
                 }
               
                     .card-category i{
                         padding: 1.5% 15px 0 0;
                         font-size: 1.4rem;
                     }
-                    // h2{
-                    //     font-weight: 700;
-                    // }
+                  
                     .card-category.active{
                         height: auto;
                     }
                 .toggle{
                     display: flex;
                     align-items: center;
-                    background-color: cornflowerblue;
+                    background: linear-gradient(rgba(7, 2, 70, 0.8), rgba(48, 77, 105, 0.7));
                     padding: 10px;
                     width: 100%;
+                    position: relative;
                 }
                 .toggle h2{
-                    padding-left: 12px;
+                    padding-left: 15px;
+                    font-size: 17px;
+                    color: white;
+                    text-shadow: 1px 1px 1px rgb(121, 5, 5);
+
                 }
                 .toggle span{
                     transition: transform ease-in-out 0.3s;
-                    font-size: .7em;
+                    font-size: .6em;
+                    position: absolute;
+                    top:37%;
+                    color: #cdb463;
+                    text-shadow: 1px 1px 1px rgb(121, 5, 5);
+
                 }
                 .card-category.active .toggle span{
                     transform: rotate(90deg);
                 }
                 .looney_image{
                     object-fit: contain;
+                    height: 220px;
                 }
-                .visible{
-                    height: 90%;
-                    width: 100%;
+                .hidden{
+                    background-color: white;
                     display: flex;
                     flex-direction: column;
-                    justify-content: space-between;
+                    justify-content: space-around;
                     align-items: center;
                 }
-               
-                .card-category:hover{
-                    background: linear-gradient(rgba(77, 77, 77,.5), rgba(145, 193, 238,.5));
+              
+                .picture{
+                    height: 50%;
+                    display: flex;
+                    justify-content: center;
+                    padding-bottom: 50px;
                 }
-             
-                    // img{
-                    //     width: 100%;
-                    //     height: 80%;
-                    //     max-height: 370px;
-                    //     object-fit: contain;
-                    // }
-                    // p{
-                    //     font-size: .8rem;
-                    //     height: 20%;
-                    //     text-align: justify;
-                    //     width: 80%;
-                    //     margin: -15px 0 20px 0 ;
-                    // }
-                    // .description_pika{
-                    //     margin: 15px 0 20px 0;
-                    // }
+                .description{
+                    background: linear-gradient(rgba(3, 4, 43, 0.9), rgba(4, 12, 78, 0.8));
+                    display: flex;
+                    border: 3px solid #cdb463;
+                    justify-content: center;
+                    width: 95%;
+                    border-radius: 2px;
+                    height: auto;
+                }
+                .overview{
+                    font-size: 12px;
+                    font-weight: 600;
+                    color: rgb(255, 255, 255);
+                    width: 80%;
+                    text-align: center;
+                    padding: 30px 0;
+                    text-shadow: 1px 1px 1px rgb(121, 5, 5);
+                }
