add dotenv - protect my secret data in .env file

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
   images[rand(images.size)]
 end %> -->
       <% @lists.each do |list| %>
-        <div class="card-category"  style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2))"> <!-- url(<%= randomized_background_image %>) -->
+        <div class="card-category"> <!-- url(<%= randomized_background_image %>) -->
           <div class="toggle">
             <span>▶</span><h2><%= list.name %></h2>
           </div>
