--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -32,6 +32,7 @@ body{
                     display: flex;
                     flex-direction: column;
                     margin: 10px;
+                    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2));
                     transition: height ease-in-out 1s;
                     box-shadow: 0 10px 10px rgba(0,0,0,0.3);
                 }
@@ -60,12 +61,12 @@ body{
 
                 }
                 .toggle span{
-                    transition: transform ease-in-out 0.3s;
+                    transition: transform ease-in-out 0.5s;
                     font-size: .6em;
                     position: absolute;
                     top:37%;
                     color: #cdb463;
-                    text-shadow: 1px 1px 1px rgb(121, 5, 5);
+                    text-shadow: 1px 1px 1px rgb(7, 2, 70);
 
                 }
                 .card-category.active .toggle span{
@@ -90,9 +91,8 @@ body{
                     padding-bottom: 50px;
                 }
                 .description{
-                    background: linear-gradient(rgba(3, 4, 43, 0.9), rgba(4, 12, 78, 0.8));
+                    background: linear-gradient(rgba(63, 2, 2, 0.8), rgba(121, 5, 5, 0.7));
                     display: flex;
-                    border: 3px solid #cdb463;
                     justify-content: center;
                     width: 95%;
                     border-radius: 2px;
